feat: Add NHITS and HMM training services to frontend and update Nginx configuration for dynamic resolution

--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -1323,6 +1323,30 @@
                 </div>
             </div>
 
+            <!-- NHITS-Training Service (neben NHITS Inference) -->
+            <div class="service-card" id="nhits-train-card" style="background: linear-gradient(135deg, rgba(249, 115, 22, 0.15), rgba(249, 115, 22, 0.05)); border-color: rgba(249, 115, 22, 0.3);">
+                <div class="service-header">
+                    <h2>NHITS-Training</h2>
+                    <span class="status-badge status-loading" id="nhits-train-status">Laden...</span>
+                </div>
+                <p>Dedizierter Training-Container - N-HiTS Zeitreihen-Modelle. Background Training.</p>
+                <div class="service-info" id="nhits-train-info">
+                    <div><span class="label">Port</span><span>3012</span></div>
+                    <div><span class="label">Training</span><span id="nhits-train-active">-</span></div>
+                    <div><span class="label">Jobs</span><span id="nhits-train-jobs">-</span></div>
+                </div>
+                <div class="service-resources">
+                    <div class="service-resource cpu"><span class="value">4 CPU</span><span class="label">CPU Limit</span></div>
+                    <div class="service-resource ram"><span class="value">16 GB</span><span class="label">RAM Limit</span></div>
+                    <div class="service-resource net"><span class="value">LOW</span><span class="label">Priority</span></div>
+                </div>
+                <div class="service-links">
+                    <a href="/service-nhits-train.html" target="_blank">Info</a>
+                    <a href="/nhits-train/docs" target="_blank" style="background: linear-gradient(135deg, rgba(249, 115, 22, 0.3), rgba(249, 115, 22, 0.15)); color: #fb923c;">API Docs</a>
+                    <a href="/nhits-train/api/v1/train/status" target="_blank">Status</a>
+                </div>
+            </div>
+
             <!-- TCN-Pattern Service (Inference) -->
             <div class="service-card" id="tcn-card">
                 <div class="service-header">
@@ -1394,6 +1418,30 @@
                 </div>
             </div>
 
+            <!-- HMM-Training Service (neben HMM Inference) -->
+            <div class="service-card" id="hmm-train-card" style="background: linear-gradient(135deg, rgba(249, 115, 22, 0.15), rgba(249, 115, 22, 0.05)); border-color: rgba(249, 115, 22, 0.3);">
+                <div class="service-header">
+                    <h2>HMM-Training</h2>
+                    <span class="status-badge status-loading" id="hmm-train-status">Laden...</span>
+                </div>
+                <p>Dedizierter Training-Container - HMM und LightGBM Scorer Modelle.</p>
+                <div class="service-info" id="hmm-train-info">
+                    <div><span class="label">Port</span><span>3014</span></div>
+                    <div><span class="label">Training</span><span id="hmm-train-active">-</span></div>
+                    <div><span class="label">Model</span><span id="hmm-train-model">-</span></div>
+                </div>
+                <div class="service-resources">
+                    <div class="service-resource cpu"><span class="value">2 CPU</span><span class="label">CPU Limit</span></div>
+                    <div class="service-resource ram"><span class="value">4 GB</span><span class="label">RAM Limit</span></div>
+                    <div class="service-resource net"><span class="value">LOW</span><span class="label">Priority</span></div>
+                </div>
+                <div class="service-links">
+                    <a href="/service-hmm-train.html" target="_blank">Info</a>
+                    <a href="/hmm-train/docs" target="_blank" style="background: linear-gradient(135deg, rgba(249, 115, 22, 0.3), rgba(249, 115, 22, 0.15)); color: #fb923c;">API Docs</a>
+                    <a href="/hmm-train/api/v1/train/status" target="_blank">Status</a>
+                </div>
+            </div>
+
             <!-- Embedder Service -->
             <div class="service-card" id="embedder-card">
                 <div class="service-header">
@@ -1461,54 +1509,6 @@
                 <div class="service-links">
                     <a href="/candlestick-train/docs" target="_blank" style="background: linear-gradient(135deg, rgba(249, 115, 22, 0.3), rgba(249, 115, 22, 0.15)); color: #fb923c;">API Docs</a>
                     <a href="/candlestick-train/api/v1/model" target="_blank">Model</a>
-                </div>
-            </div>
-
-            <!-- NHITS-Training Service -->
-            <div class="service-card" id="nhits-train-card" style="background: linear-gradient(135deg, rgba(249, 115, 22, 0.15), rgba(249, 115, 22, 0.05)); border-color: rgba(249, 115, 22, 0.3);">
-                <div class="service-header">
-                    <h2>NHITS-Training</h2>
-                    <span class="status-badge status-loading" id="nhits-train-status">Laden...</span>
-                </div>
-                <p>Dedizierter Training-Container - N-HiTS Zeitreihen-Modelle. Background Training.</p>
-                <div class="service-info" id="nhits-train-info">
-                    <div><span class="label">Port</span><span>3012</span></div>
-                    <div><span class="label">Training</span><span id="nhits-train-active">-</span></div>
-                    <div><span class="label">Jobs</span><span id="nhits-train-jobs">-</span></div>
-                </div>
-                <div class="service-resources">
-                    <div class="service-resource cpu"><span class="value">4 CPU</span><span class="label">CPU Limit</span></div>
-                    <div class="service-resource ram"><span class="value">16 GB</span><span class="label">RAM Limit</span></div>
-                    <div class="service-resource net"><span class="value">LOW</span><span class="label">Priority</span></div>
-                </div>
-                <div class="service-links">
-                    <a href="/service-nhits-train.html" target="_blank">Info</a>
-                    <a href="/nhits-train/docs" target="_blank" style="background: linear-gradient(135deg, rgba(249, 115, 22, 0.3), rgba(249, 115, 22, 0.15)); color: #fb923c;">API Docs</a>
-                    <a href="/nhits-train/api/v1/train/status" target="_blank">Status</a>
-                </div>
-            </div>
-
-            <!-- HMM-Training Service -->
-            <div class="service-card" id="hmm-train-card" style="background: linear-gradient(135deg, rgba(249, 115, 22, 0.15), rgba(249, 115, 22, 0.05)); border-color: rgba(249, 115, 22, 0.3);">
-                <div class="service-header">
-                    <h2>HMM-Training</h2>
-                    <span class="status-badge status-loading" id="hmm-train-status">Laden...</span>
-                </div>
-                <p>Dedizierter Training-Container - HMM und LightGBM Scorer Modelle.</p>
-                <div class="service-info" id="hmm-train-info">
-                    <div><span class="label">Port</span><span>3014</span></div>
-                    <div><span class="label">Training</span><span id="hmm-train-active">-</span></div>
-                    <div><span class="label">Model</span><span id="hmm-train-model">-</span></div>
-                </div>
-                <div class="service-resources">
-                    <div class="service-resource cpu"><span class="value">2 CPU</span><span class="label">CPU Limit</span></div>
-                    <div class="service-resource ram"><span class="value">4 GB</span><span class="label">RAM Limit</span></div>
-                    <div class="service-resource net"><span class="value">LOW</span><span class="label">Priority</span></div>
-                </div>
-                <div class="service-links">
-                    <a href="/service-hmm-train.html" target="_blank">Info</a>
-                    <a href="/hmm-train/docs" target="_blank" style="background: linear-gradient(135deg, rgba(249, 115, 22, 0.3), rgba(249, 115, 22, 0.15)); color: #fb923c;">API Docs</a>
-                    <a href="/hmm-train/api/v1/train/status" target="_blank">Status</a>
                 </div>
             </div>
 
